--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
+  <script src="javascripts/jquery.js" charset="utf-8"></script>
+  <script src="javascripts/index.js" charset="utf-8"></script>
 </head>
 <body>
   <section class="main">
@@ -14,16 +16,16 @@
   </section>
 
   <section class="elements">
-   <section class="figures">
-    <div class="f1"></div>
-    <div class="f2"></div>
-    <div class="f3"></div>
-    <div class="f4"></div>
-    <div class="f5"></div>
-    <div class="f6"></div>
-    <div class="f7"></div>
-    <div class="f8"></div>
-    <div class="f9"></div>
+   <section class="figures screen">
+    <div class="rectangle f1"></div>
+    <div class="rectangle f2"></div>
+    <div class="rectangle f3"></div>
+    <div class="rectangle f4"></div>
+    <div class="rectangle f5"></div>
+    <div class="rectangle f6"></div>
+    <div class="rectangle f7"></div>
+    <div class="rectangle f8"></div>
+    <div class="rectangle f9"></div>
   </section>
  </section>
 </body>
