--- a/index.html
+++ b/index.html
@@ -7,15 +7,29 @@
 
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/chaos.css">
+  <link rel="stylesheet" href="stylesheets/menubar.css">
+  <link rel="stylesheet" href="stylesheets/footer.css">
+
   <script src="javascripts/jquery.js" charset="utf-8"></script>
   <script src="javascripts/index.js" charset="utf-8"></script>
+  <script src="javascripts/chaos.js" charset="utf-8"></script>
+
+  <link rel="shortcut icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
+  <nav class="menubar">
+    <a class="gal" href="#">галерея</a>
+    <a class="logo" href="#">RANDOMATIZM</a>
+    <a class="ab" href="#">о проекте</a>
+  </nav>
+
   <section class="main">
     <div class="bg"></div>
   </section>
 
-  <section class="elements">
+  <section class="main">
    <section class="figures screen">
     <div class="rectangle f1"></div>
     <div class="rectangle f2"></div>
@@ -28,5 +42,12 @@
     <div class="rectangle f9"></div>
   </section>
  </section>
+
+ <nav class="footer">
+   <div class="vern">вернуться<br>к оригиналу</div>
+   <div class="random">RANDOM!<br>эффекты</div>
+   <div class="chaos">CHAOS!</div>
+ </nav>
+
 </body>
 </html>
