под 27" все красиво

--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
   </section>
  </section>
 
+ <section class="figcaption">
+   <p class="picture">«Живописный реализм футболиста»</p>
+   <p class="painter">Казимир Малевич, 1909 год</p>
+ </section>
+
  <nav class="footer">
    <div class="vern">вернуться<br>к оригиналу</div>
-   <div class="random">RANDOM!<br>эффекты</div>
-   <div class="chaos">CHAOS!</div>
+   <div class="random">RANDOM!</div>
+   <div class="chaos">добавить<br>эффекты</div>
  </nav>
 
 </body>
