--- a/index.html
+++ b/index.html
@@ -26,22 +26,20 @@
   </nav>
 
   <section class="main">
-    <div class="bg"></div>
+    <div class="bg">
+      <section class="figures screen">
+       <div class="rectangle f1"></div>
+       <div class="rectangle f2"></div>
+       <div class="rectangle f3"></div>
+       <div class="rectangle f4"></div>
+       <div class="rectangle f5"></div>
+       <div class="rectangle f6"></div>
+       <div class="rectangle f7"></div>
+       <div class="rectangle f8"></div>
+       <div class="rectangle f9"></div>
+     </section>
+    </div>
   </section>
-
-  <section class="main">
-   <section class="figures screen">
-    <div class="rectangle f1"></div>
-    <div class="rectangle f2"></div>
-    <div class="rectangle f3"></div>
-    <div class="rectangle f4"></div>
-    <div class="rectangle f5"></div>
-    <div class="rectangle f6"></div>
-    <div class="rectangle f7"></div>
-    <div class="rectangle f8"></div>
-    <div class="rectangle f9"></div>
-  </section>
- </section>
 
  <section class="figcaption">
    <p class="picture">«Живописный реализм футболиста»</p>
