--- a/gallery.html
+++ b/gallery.html
@@ -28,15 +28,80 @@
     <a class="ab" href="#">о проекте</a>
   </nav>
 
-  <section class="malevich">
-    <div class="malevichBg"></div>
-    <div class="malevichTriangle"></div>
-    <div class="malevichSquare"></div>
-    
-    <h1>МАЛЕВИЧ</h1>
-    <div class="malevichArt"></div>
+  <section class="globalflex">
+    <section class="all">
+      <section class="malevich">
+        <div class="malevichBg"></div>
+        <div class="malevichTriangle"></div>
+        <div class="malevichSquare"></div>
 
+        <h1 class="right">МАЛЕВИЧ</h1>
+        <div class="malevichArt"></div>
+        <div class="malevichCaption">
+          <h2>«Композиция N5»</h2>
+          <p>Казимир Малевич,<br>
+            1923 год, Витебск<br>
+            Третьяковская Галерея</p>
+        </div>
+
+        <section class="gallery">
+          <nav class="galleryNav">
+            <div class="disabled" id='prev'></div>
+            <div id='next'></div>
+          </nav>
+
+          <section class="galleryRail">
+            <div class="galleryItem" >
+              <div id="i1"></div>
+              <h1>Картина 1</h1>
+              <p>художник 1</p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i2"></div>
+              <h1>Картина 2</h1>
+              <p>художник 2</p>
+              <p></p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i3"></div>
+              <h1></h1>
+              <p></p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i4"></div>
+              <h1></h1>
+              <p></p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i5"></div>
+              <h1></h1>
+              <p></p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i6"></div>
+              <h1></h1>
+              <p></p>
+            </div>
+
+          </section>
+        </section>
+
+      </section>
+
+      <section class="chashnik">
+        <div class="chashnikBg"></div>
+        <div class="chashnikTriangle"></div>
+
+        <h1 class="left">ЧАШНИК</h1>
+        <div class="chashnikArt"></div>
+        <div class="chashnikCaption">
+          <h2>«Композиция N5»</h2>
+          <p>Казимир Малевич,<br>
+            1923 год, Витебск<br>
+            Третьяковская Галерея</p>
+        </div>
+      </section>
+    </section>
   </section>
-
 </body>
 </html>
