--- a/gallery.html
+++ b/gallery.html
@@ -22,11 +22,13 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
-  <nav class="menubar">
-    <a class="gal" href="#">галерея</a>
-    <a class="logo" href="#">RANDOMATIZM</a>
-    <a class="ab" href="#">о проекте</a>
-  </nav>
+  <!-- <nav class="menubar">
+    <div class="manu">
+      <a class="gal" href="#">галерея</a>
+      <a class="logo" href="#">RANDOMATIZM</a>
+      <a class="ab" href="#">о проекте</a>
+    </div>
+  </nav> -->
 
   <section class="globalflex">
     <section class="all">
@@ -45,42 +47,41 @@
         </div>
 
         <section class="gallery">
-          <nav class="galleryNav">
-            <div class="disabled" id='prev'></div>
-            <div id='next'></div>
-          </nav>
-
           <section class="galleryRail">
             <div class="galleryItem" >
-              <div id="i1"></div>
+              <img src="materials/malevich2.jpg" alt="">
               <h1>Картина 1</h1>
               <p>художник 1</p>
             </div>
+
             <div class="galleryItem" >
-              <div id="i2"></div>
+              <img src="materials/malevich3.jpg" alt="">
               <h1>Картина 2</h1>
               <p>художник 2</p>
-              <p></p>
             </div>
+
             <div class="galleryItem" >
-              <div id="i3"></div>
-              <h1></h1>
-              <p></p>
+              <img src="materials/malevich4.jpg" alt="">
+              <h1>Картина 3</h1>
+              <p>художник 3</p>
             </div>
+
             <div class="galleryItem" >
-              <div id="i4"></div>
-              <h1></h1>
-              <p></p>
+              <img src="materials/malevich4.jpg" alt="">
+              <h1>Картина 4</h1>
+              <!-- <p>художник 4</p> -->
             </div>
+
             <div class="galleryItem" >
-              <div id="i5"></div>
-              <h1></h1>
-              <p></p>
+              <img src="materials/malevich3.jpg" alt="">
+              <h1>Картина 5</h1>
+              <!-- <p>художник 5</p> -->
             </div>
+
             <div class="galleryItem" >
-              <div id="i6"></div>
-              <h1></h1>
-              <p></p>
+              <img src="materials/malevich2.jpg" alt="">
+              <h1>Картина 6</h1>
+              <!-- <p>художник 6</p> -->
             </div>
 
           </section>
