поправил высоты блоков и решил все глобально переделать

--- a/gallery.html
+++ b/gallery.html
@@ -22,13 +22,13 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
-  <!-- <nav class="menubar">
+  <nav class="menubar">
     <div class="manu">
       <a class="gal" href="#">галерея</a>
       <a class="logo" href="#">RANDOMATIZM</a>
       <a class="ab" href="#">о проекте</a>
     </div>
-  </nav> -->
+  </nav>
 
   <section class="globalflex">
     <section class="all">
@@ -69,26 +69,24 @@
             <div class="galleryItem" >
               <img src="materials/malevich4.jpg" alt="">
               <h1>Картина 4</h1>
-              <!-- <p>художник 4</p> -->
+              <p>художник 4</p>
             </div>
 
             <div class="galleryItem" >
               <img src="materials/malevich3.jpg" alt="">
               <h1>Картина 5</h1>
-              <!-- <p>художник 5</p> -->
+              <p>художник 5</p>
             </div>
 
             <div class="galleryItem" >
               <img src="materials/malevich2.jpg" alt="">
               <h1>Картина 6</h1>
-              <!-- <p>художник 6</p> -->
+              <p>художник 6</p>
             </div>
 
           </section>
         </section>
-
       </section>
-
       <section class="chashnik">
         <div class="chashnikBg"></div>
         <div class="chashnikTriangle"></div>
