--- a/gallery.html
+++ b/gallery.html
@@ -23,9 +23,9 @@
 </head>
 <body>
   <nav class="menubar">
-    <div class="manu">
+    <div class="menu">
       <a class="gal" href="#">галерея</a>
-      <a class="logo" href="#">RANDOMATIZM</a>
+      <a class="logo" href="#"></a>
       <a class="ab" href="#">о проекте</a>
     </div>
   </nav>
@@ -37,7 +37,16 @@
         <div class="malevichTriangle"></div>
         <div class="malevichSquare"></div>
 
-        <h1 class="right">МАЛЕВИЧ</h1>
+        <div class="right"><h1>МАЛЕВИЧ</h1></div>
+        <div class="left">
+          <p>
+            всего<br>
+            на сайте<br>
+            15 работ<br>
+            кроме этой
+          </p>
+        </div>
+
         <div class="malevichArt"></div>
         <div class="malevichCaption">
           <h2>«Композиция N5»</h2>
@@ -45,8 +54,15 @@
             1923 год, Витебск<br>
             Третьяковская Галерея</p>
         </div>
+      </section>
 
-        <section class="gallery">
+      <section class="gallery">
+        <nav class="galleryNav">
+          <div class="next"></div>
+          <div class="previous"></div>
+        </nav>
+
+        <section class="galleryPort">
           <section class="galleryRail">
             <div class="galleryItem" >
               <img src="materials/malevich2.jpg" alt="">
@@ -83,23 +99,23 @@
               <h1>Картина 6</h1>
               <p>художник 6</p>
             </div>
-
           </section>
         </section>
       </section>
+
       <section class="chashnik">
         <div class="chashnikBg"></div>
         <div class="chashnikTriangle"></div>
 
-        <h1 class="left">ЧАШНИК</h1>
+        <div class="left"><h1>ЧАШНИК</h1></div>
         <div class="chashnikArt"></div>
         <div class="chashnikCaption">
-          <h2>«Композиция N5»</h2>
-          <p>Казимир Малевич,<br>
-            1923 год, Витебск<br>
-            Третьяковская Галерея</p>
+          <h2>«Два круга»</h2>
+          <p>Илья Чашник,<br>
+            1902 год, Москва, ЦДХ<br>
         </div>
       </section>
+
     </section>
   </section>
 </body>
