изменил алгоритм рандома, работает кнопка возврата к оригиналу

--- a/index 2.html
+++ b/index 2.html
@@ -14,7 +14,7 @@
   <script src="javascripts/jquery.js" charset="utf-8"></script>
   <script src="javascripts/index.js" charset="utf-8"></script>
   <script src="javascripts/chaos.js" charset="utf-8"></script>
-  <script src="javascripts/3d.js" charset="utf-8"></script>
+  <!-- <script src="javascripts/3d.js" charset="utf-8"></script> -->
 
   <link rel="shortcut icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
@@ -47,6 +47,7 @@
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
         <div class="tooriginal">к оригиналу</div>
+        <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
       </nav>
     </section>
   </section>
