--- a/index_old.html
+++ b/index_old.html
@@ -9,17 +9,24 @@
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/chaos.css">
   <link rel="stylesheet" href="stylesheets/menubar.css">
-  <!-- <link rel="stylesheet" href="stylesheets/3d.css"> -->
+  <link rel="stylesheet" href="stylesheets/footer.css">
+  <link rel="stylesheet" href="stylesheets/3d.css">
 
   <script src="javascripts/jquery.js" charset="utf-8"></script>
   <script src="javascripts/index.js" charset="utf-8"></script>
   <script src="javascripts/chaos.js" charset="utf-8"></script>
-  <!-- <script src="javascripts/3d.js" charset="utf-8"></script> -->
+  <script src="javascripts/3d.js" charset="utf-8"></script>
 
   <link rel="shortcut icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
+  <nav class="menubar">
+    <a class="gal" href="#">галерея</a>
+    <a class="logo" href="#">RANDOMATIZM</a>
+    <a class="ab" href="#">о проекте</a>
+  </nav>
+
   <section class="main">
     <div class="bg">
       <section class="figures screen">
@@ -36,22 +43,18 @@
        </section>
      </section>
     </div>
-
-    <section class="figcaption">
-      <h1>«Живописный реализм футболиста»</h1>
-      <h2>Казимир Малевич, 1915.<br>
-        44x69,9 см. Холст, масло. <br>
-        Городской музей Амстердама.
-      </h2>
-      <p>В этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с круглыми формами мяча. Однако на этой картине нет ни одной круглой детали. Нет даже ощущения быстрого движения – можно представить себе только замедленное действие.</p>
-      <nav class="bottons">
-        <div class="random">РАНДОМ!</div>
-        <div class="tooriginal">к оригиналу</div>
-        <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
-      </nav>
-    </section>
   </section>
 
+ <section class="figcaption">
+   <p class="picture">«Живописный реализм футболиста»</p>
+   <p class="painter">Казимир Малевич, 1909 год</p>
+ </section>
+
+ <nav class="footer">
+   <div class="vern">вернуться<br>к оригиналу</div>
+   <div class="random">RANDOM!</div>
+   <div class="chaos">добавить<br>эффекты</div>
+ </nav>
 
 </body>
 </html>
