пробы мобильной версии

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="stylesheet" href="stylesheets/chaos.css">
-  <link rel="stylesheet" href="stylesheets/menubar.css">
+  <!-- <link rel="stylesheet" href="stylesheets/chaos.css"> -->
+  <!-- <link rel="stylesheet" href="stylesheets/menubar.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/3d.css"> -->
 
   <script src="javascripts/jquery.js" charset="utf-8"></script>
@@ -43,7 +43,7 @@
         44x69,9 см. Холст, масло. <br>
         Городской музей Амстердама.
       </h2>
-      <p>В этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с круглыми формами мяча. Однако на этой картине нет ни одной круглой детали. Нет даже ощущения быстрого движения – можно представить себе только замедленное действие.</p>
+      <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p>
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
         <div class="tooriginal">к оригиналу</div>
