--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      </section>
     </div>
 
-    <section class="figcaption">
+    <section class="figcaption nomobile">
       <h1>«Живописный реализм футболиста»</h1>
       <h2>Казимир Малевич, 1915.<br>
         44x69,9 см. Холст, масло. <br>
@@ -49,6 +49,20 @@
         <div class="tooriginal">к оригиналу</div>
         <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
       </nav>
+    </section>
+
+    <section class="figcaption mobile">
+      <nav class="bottons">
+        <div class="random">РАНДОМ!</div>
+        <div class="tooriginal">к оригиналу</div>
+        <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
+      </nav>
+      <h1>«Живописный реализм футболиста»</h1>
+      <h2>Казимир Малевич, 1915.<br>
+        44x69,9 см. Холст, масло. <br>
+        Городской музей Амстердама.
+      </h2>
+      <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p>
     </section>
   </section>
 
