сделал появление кнопки "к оригиналу"

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
     <section class="figcaption nomobile">
       <h1>«Живописный реализм футболиста»</h1>
       <h2>Казимир Малевич, 1915.<br>
-        44x69,9 см. Холст, масло. <br>
-        Городской музей Амстердама.
+        44x69,9 см. Холст, масло.<br>
+        Городской музей Амстердама.<br>
       </h2>
       <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p>
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
-        <div class="tooriginal">к оригиналу</div>
-        <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
+        <div class="tooriginal  original">к оригиналу</div>
       </nav>
+      <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/painterly-realism-of-a-football-player-%E2%80%93-color-masses-in-the-4th-dimension/HAFbsVPXhzyLMg?hl=ru">смотреть в Google Arts&Culture</a> -->
     </section>
 
     <section class="figcaption mobile">
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
-        <div class="tooriginal">к оригиналу</div>
+        <div class="tooriginal original">к оригиналу</div>
         <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
       </nav>
       <h1>«Живописный реализм футболиста»</h1>
