сделал страничку с Поповой, переход

--- a/index_popova.html
+++ b/index_popova.html
@@ -7,13 +7,13 @@
 
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="stylesheet" href="stylesheets/malevich.css">
+  <link rel="stylesheet" href="stylesheets/popova.css">
   <!-- <link rel="stylesheet" href="stylesheets/chaos.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/menubar.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/3d.css"> -->
 
   <script src="javascripts/jquery.js" charset="utf-8"></script>
-  <script src="javascripts/index.js" charset="utf-8"></script>
+  <script src="javascripts/index-popova.js" charset="utf-8"></script>
   <script src="javascripts/chaos.js" charset="utf-8"></script>
   <!-- <script src="javascripts/3d.js" charset="utf-8"></script> -->
 
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
-  <a class="navigation next" href="index_popova.html"><div></div></a>
+  <a class="navigation previous" href="index.html"><div></div></a>
 
   <section class="main">
     <div class="bg">
@@ -31,25 +31,20 @@
          <div class="rectangle f2"></div>
          <div class="rectangle f3"></div>
          <div class="rectangle f4"></div>
-         <div class="rectangle f5"></div>
-         <div class="rectangle f6"></div>
-         <div class="rectangle f7"></div>
-         <div class="rectangle f8"></div>
-         <div class="rectangle f9"></div>
        </section>
      </section>
     </div>
 
     <section class="figcaption nomobile">
-      <h1>«Живописный реализм футболиста»</h1>
-      <h2>Казимир Малевич, 1915.<br>
-        44x69,9 см. Холст, масло.<br>
-        Городской музей Амстердама.<br>
+      <h1>«Композиция (Красное-Черное-Золотое)»</h1>
+      <h2>Любовь Попова, 1920.<br>
+        23,2x29 см. Коллаж.<br>
+        Museu Coleção Berardo.<br>
       </h2>
       <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p>
       <nav class="bottons">
         <div class="random">РАНДОМ!</div>
-        <div class="tooriginal  original">к оригиналу</div>
+        <div class="tooriginal original">к оригиналу</div>
       </nav>
       <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/painterly-realism-of-a-football-player-%E2%80%93-color-masses-in-the-4th-dimension/HAFbsVPXhzyLMg?hl=ru">смотреть в Google Arts&Culture</a> -->
     </section>
@@ -60,10 +55,10 @@
         <div class="tooriginal original">к оригиналу</div>
         <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
       </nav>
-      <h1>«Живописный реализм футболиста»</h1>
-      <h2>Казимир Малевич, 1915.<br>
-        44x69,9 см. Холст, масло. <br>
-        Городской музей Амстердама.
+      <h1>«Композиция (Красное-Черное-Золотое)»</h1>
+      <h2>Любовь Попова, 1920.<br>
+        23,2x29 см. Коллаж.<br>
+        Museu Coleção Berardo.<br>
       </h2>
       <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p>
     </section>
