--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
   <nav class="menubar">
     <div class="menu">
       <a class="gal" href="#">галерея</a>
-      <a class="logo" href="#"></a>
+      <a class="logo" href="index.html"></a>
       <a class="ab" href="#">о проекте</a>
     </div>
   </nav>
