--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
   <a class="navigation next" href="index_popova.html"><div></div></a>
+  <a class="navigation previous" href="gallery.html"><div></div></a>
 
   <section class="main">
     <div class="bg">
