начал делать таймлайн

--- a/gallery.html
+++ b/gallery.html
@@ -23,11 +23,9 @@
 </head>
 <body>
   <nav class="menubar">
-    <div class="menu">
-      <a class="gal" href="#">галерея</a>
-      <a class="logo" href="index.html"></a>
-      <a class="ab" href="#">о проекте</a>
-    </div>
+    <a class="gal" href="#">галерея</a>
+    <a class="logo" href="#">RANDOMATIZM</a>
+    <a class="ab" href="#">о проекте</a>
   </nav>
 
   <section class="globalflex">
@@ -37,16 +35,7 @@
         <div class="malevichTriangle"></div>
         <div class="malevichSquare"></div>
 
-        <div class="right"><h1>МАЛЕВИЧ</h1></div>
-        <div class="left">
-          <p>
-            всего<br>
-            на сайте<br>
-            15 работ<br>
-            кроме этой
-          </p>
-        </div>
-
+        <h1 class="right">МАЛЕВИЧ</h1>
         <div class="malevichArt"></div>
         <div class="malevichCaption">
           <h2>«Композиция N5»</h2>
@@ -54,68 +43,64 @@
             1923 год, Витебск<br>
             Третьяковская Галерея</p>
         </div>
-      </section>
 
-      <section class="gallery">
-        <nav class="galleryNav">
-          <div class="next"></div>
-          <div class="previous"></div>
-        </nav>
+        <section class="gallery">
+          <nav class="galleryNav">
+            <div class="disabled" id='prev'></div>
+            <div id='next'></div>
+          </nav>
 
-        <section class="galleryPort">
           <section class="galleryRail">
             <div class="galleryItem" >
-              <img src="materials/malevich2.jpg" alt="">
+              <div id="i1"></div>
               <h1>Картина 1</h1>
               <p>художник 1</p>
             </div>
-
             <div class="galleryItem" >
-              <img src="materials/malevich3.jpg" alt="">
+              <div id="i2"></div>
               <h1>Картина 2</h1>
               <p>художник 2</p>
+              <p></p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i3"></div>
+              <h1></h1>
+              <p></p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i4"></div>
+              <h1></h1>
+              <p></p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i5"></div>
+              <h1></h1>
+              <p></p>
+            </div>
+            <div class="galleryItem" >
+              <div id="i6"></div>
+              <h1></h1>
+              <p></p>
             </div>
 
-            <div class="galleryItem" >
-              <img src="materials/malevich4.jpg" alt="">
-              <h1>Картина 3</h1>
-              <p>художник 3</p>
-            </div>
-
-            <div class="galleryItem" >
-              <img src="materials/malevich4.jpg" alt="">
-              <h1>Картина 4</h1>
-              <p>художник 4</p>
-            </div>
-
-            <div class="galleryItem" >
-              <img src="materials/malevich3.jpg" alt="">
-              <h1>Картина 5</h1>
-              <p>художник 5</p>
-            </div>
-
-            <div class="galleryItem" >
-              <img src="materials/malevich2.jpg" alt="">
-              <h1>Картина 6</h1>
-              <p>художник 6</p>
-            </div>
           </section>
         </section>
+
       </section>
 
       <section class="chashnik">
         <div class="chashnikBg"></div>
         <div class="chashnikTriangle"></div>
 
-        <div class="left"><h1>ЧАШНИК</h1></div>
+        <h1 class="left">ЧАШНИК</h1>
         <div class="chashnikArt"></div>
         <div class="chashnikCaption">
-          <h2>«Два круга»</h2>
-          <p>Илья Чашник,<br>
-            1902 год, Москва, ЦДХ<br>
+          <h2>«Композиция N5»</h2>
+          <p>Казимир Малевич,<br>
+            1923 год, Витебск<br>
+            Третьяковская Галерея</p>
         </div>
       </section>
-
     </section>
   </section>
 </body>
