--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/malevich.css">
+  <link rel="stylesheet" href="stylesheets/timeline.css">
   <!-- <link rel="stylesheet" href="stylesheets/chaos.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/menubar.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/3d.css"> -->
@@ -21,6 +22,74 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
+
+  <section class="timeline">
+    <?xml version="1.0" encoding="utf-8"?>
+    <!-- Generator: Adobe Illustrator 20.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    	 viewBox="0 0 15 601" style="enable-background:new 0 0 15 601;" xml:space="preserve">
+    <style type="text/css">
+    	.st0{clip-path:url(#SVGID_2_);}
+    	.st1{fill:#E2E2E1;}
+    	.st2{fill:url(#SVGID_3_);}
+    </style>
+    <g>
+    	<defs>
+        <path id="SVGID_1_" d="M15,83.5c0-3.1-1.9-5.7-4.5-6.9V14.4c2.6-1.2,4.5-3.8,4.5-6.9C15,3.4,11.6,0,7.5,0S0,3.4,0,7.5
+    			c0,3.1,1.9,5.7,4.5,6.9v62.3C1.9,77.8,0,80.4,0,83.5s1.9,5.7,4.5,6.9v113.8C1.9,205.3,0,207.9,0,211s1.9,5.7,4.5,6.9v29.8
+    			c-2.6,1.2-4.5,3.8-4.5,6.9s1.9,5.7,4.5,6.9v47.8C1.9,310.3,0,312.9,0,316s1.9,5.7,4.5,6.9v101.3C1.9,425.3,0,427.9,0,431
+    			s1.9,5.7,4.5,6.9v62.8c-2.6,1.2-4.5,3.8-4.5,6.9s1.9,5.7,4.5,6.9v72.3c-2.6,1.2-4.5,3.8-4.5,6.9c0,4.1,3.4,7.5,7.5,7.5
+    			s7.5-3.4,7.5-7.5c0-3.1-1.9-5.7-4.5-6.9v-72.3c2.6-1.2,4.5-3.8,4.5-6.9s-1.9-5.7-4.5-6.9v-62.8c2.6-1.2,4.5-3.8,4.5-6.9
+    			s-1.9-5.7-4.5-6.9V322.9c2.6-1.2,4.5-3.8,4.5-6.9s-1.9-5.7-4.5-6.9v-47.8c2.6-1.2,4.5-3.8,4.5-6.9s-1.9-5.7-4.5-6.9v-29.8
+    			c2.6-1.2,4.5-3.8,4.5-6.9s-1.9-5.7-4.5-6.9V90.4C13.1,89.2,15,86.6,15,83.5z M2.5,7.5c0-2.8,2.3-5,5-5s5,2.3,5,5c0,2.8-2.3,5-5,5
+    			S2.5,10.3,2.5,7.5z M12.5,593.8c0,2.8-2.3,5-5,5s-5-2.3-5-5s2.3-5,5-5S12.5,591,12.5,593.8z M12.5,507.7c0,2.8-2.3,5-5,5
+    			s-5-2.3-5-5c0-2.8,2.3-5,5-5S12.5,504.9,12.5,507.7z M12.5,431c0,2.8-2.3,5-5,5s-5-2.3-5-5c0-2.8,2.3-5,5-5S12.5,428.2,12.5,431z
+    			 M12.5,316c0,2.8-2.3,5-5,5s-5-2.3-5-5c0-2.8,2.3-5,5-5S12.5,313.2,12.5,316z M12.5,254.7c0,2.8-2.3,5-5,5s-5-2.3-5-5
+    			c0-2.8,2.3-5,5-5S12.5,251.9,12.5,254.7z M12.5,211.2c0,2.8-2.3,5-5,5s-5-2.3-5-5c0-2.8,2.3-5,5-5S12.5,208.4,12.5,211.2z
+    			 M7.5,88.5c-2.8,0-5-2.3-5-5c0-2.8,2.3-5,5-5s5,2.3,5,5C12.5,86.3,10.3,88.5,7.5,88.5z"/>
+    	</defs>
+    	<clipPath id="SVGID_2_">
+    		<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+    	</clipPath>
+    	<g class="st0">
+    		<rect y="0" class="st1" width="15" height="601"/>
+    		<linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="-62.5833" y1="34" x2="-7.6667" y2="34" gradientTransform="matrix(6.123234e-17 1 -1 6.123234e-17 41.5 118.5)">
+    			<stop offset="0" style="stop-color:#FFFFFF;stop-opacity:0"/>
+    			<stop offset="1.051143e-02" style="stop-color:#F9F9F9;stop-opacity:2.001524e-02"/>
+    			<stop offset="8.127659e-02" style="stop-color:#D5D4D4;stop-opacity:0.1548"/>
+    			<stop offset="0.1536" style="stop-color:#B3B3B2;stop-opacity:0.2924"/>
+    			<stop offset="0.2262" style="stop-color:#959595;stop-opacity:0.4308"/>
+    			<stop offset="0.2993" style="stop-color:#7D7D7D;stop-opacity:0.5699"/>
+    			<stop offset="0.373" style="stop-color:#6B6B6A;stop-opacity:0.7103"/>
+    			<stop offset="0.4478" style="stop-color:#60605F;stop-opacity:0.8526"/>
+    			<stop offset="0.5252" style="stop-color:#5C5C5B"/>
+    			<stop offset="0.598" style="stop-color:#60605F;stop-opacity:0.8466"/>
+    			<stop offset="0.6658" style="stop-color:#6A6A6A;stop-opacity:0.7039"/>
+    			<stop offset="0.7316" style="stop-color:#7C7C7C;stop-opacity:0.5653"/>
+    			<stop offset="0.7961" style="stop-color:#949493;stop-opacity:0.4294"/>
+    			<stop offset="0.8598" style="stop-color:#B0B0B0;stop-opacity:0.2952"/>
+    			<stop offset="0.9228" style="stop-color:#D1D1D1;stop-opacity:0.1625"/>
+    			<stop offset="0.9842" style="stop-color:#F5F5F5;stop-opacity:3.324151e-02"/>
+    			<stop offset="1" style="stop-color:#FFFFFF;stop-opacity:0"/>
+    		</linearGradient>
+    		<polygon class="st2" points="0,110.8 0,55.9 15,55.9 15,110.8"/>
+    	</g>
+    </g>
+    <circle class="circle" id="c1" cx="7.5" cy="7.5"   r="5"/>
+    <circle class="circle" id="c2" cx="7.5" cy="83.5"  r="5"/>
+    <circle class="circle" id="c3" cx="7.5" cy="211.2" r="5"/>
+    <circle class="circle" id="c4" cx="7.5" cy="254.7" r="5"/>
+    <circle class="circle" id="c5" cx="7.5" cy="316"   r="5"/>
+    <circle class="circle" id="c6" cx="7.5" cy="431"   r="5"/>
+    <circle class="circle" id="c7" cx="7.5" cy="507.7" r="5"/>
+    <circle class="circle" id="c8" cx="7.5" cy="593.8" r="5"/>
+    </svg>
+
+
+  </section>
+
+
+
   <a class="navigation next" href="index_popova.html"><div></div></a>
   <a class="navigation previous" href="gallery.html"><div></div></a>
 
