--- a/index.html
+++ b/index.html
@@ -23,38 +23,36 @@
 </head>
 <body>
 
-  <section class="timeline">
-    <div class="tl3"></div>
-    <a href="#" class="tl1" id="y1910s"><div id="y1910c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1911s"><div id="y1911c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1912s"><div id="y1912c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1913s"><div id="y1913c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1915s"><div id="y1915c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1916s"><div id="y1916c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1917s"><div id="y1917c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1918s"><div id="y1918c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1919s"><div id="y1919c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1920s"><div id="y1920c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1921s"><div id="y1921c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1922s"><div id="y1922c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1923s"><div id="y1923c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1924s"><div id="y1924c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1925s"><div id="y1925c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1926s"><div id="y1926c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1927s"><div id="y1927c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1928s"><div id="y1928c" class="tl2"></div></a>
-    <a href="#" class="tl1" id="y1929s"><div id="y1929c" class="tl2"></div></a>
-
-
-
-
+  <section class="timelineflex">
+    <section class="timeline">
+      <div class="tl3"></div>
+      <a href="#" class="tl1" id="y1910s"><div id="y1910c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1911s"><div id="y1911c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1912s"><div id="y1912c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1913s"><div id="y1913c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1915s"><div id="y1915c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1916s"><div id="y1916c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1917s"><div id="y1917c" class="tl2"></div></a>
+      <a href="index_popova.html" class="tl1" id="y1918s"><div id="y1918c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1919s"><div id="y1919c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1920s"><div id="y1920c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1921s"><div id="y1921c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1922s"><div id="y1922c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1923s"><div id="y1923c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1924s"><div id="y1924c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1925s"><div id="y1925c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1926s"><div id="y1926c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1927s"><div id="y1927c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1928s"><div id="y1928c" class="tl2"></div></a>
+      <a href="#" class="tl1" id="y1929s"><div id="y1929c" class="tl2"></div></a>
+    </section>
   </section>
 
 
 
-  <a class="navigation next" href="index_popova.html"><div></div></a>
-  <a class="navigation previous" href="gallery.html"><div></div></a>
+  <!-- <a class="navigation next" href="index_popova.html"><div></div></a>
+  <a class="navigation previous" href="gallery.html"><div></div></a> -->
 
   <section class="main">
     <div class="bg">
