--- a/index_popova.html
+++ b/index_popova.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/timeline.css">
   <link rel="stylesheet" href="stylesheets/popova.css">
   <!-- <link rel="stylesheet" href="stylesheets/chaos.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/menubar.css"> -->
@@ -21,7 +22,31 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
-  <a class="navigation previous" href="index.html"><div></div></a>
+  <section class="timeline">
+    <div class="tl3"></div>
+    <a href="#" class="tl1" id="y1910s"><div id="y1910c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1911s"><div id="y1911c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1912s"><div id="y1912c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1913s"><div id="y1913c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
+    <a href="index.html" class="tl1" id="y1915s"><div id="y1915c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1916s"><div id="y1916c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1917s"><div id="y1917c" class="tl2"></div></a>
+    <a href="index_popova.html" class="tl1" id="y1918s"><div id="y1918c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1919s"><div id="y1919c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1920s"><div id="y1920c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1921s"><div id="y1921c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1922s"><div id="y1922c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1923s"><div id="y1923c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1924s"><div id="y1924c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1925s"><div id="y1925c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1926s"><div id="y1926c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1927s"><div id="y1927c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1928s"><div id="y1928c" class="tl2"></div></a>
+    <a href="#" class="tl1" id="y1929s"><div id="y1929c" class="tl2"></div></a>
+  </section>
+
+  <!-- <a class="navigation previous" href="index.html"><div></div></a> -->
 
   <section class="main">
     <div class="bg">
@@ -38,7 +63,7 @@
     <section class="figcaption nomobile">
       <!-- <h1>«Композиция (Красное-Черное-Золотое)»</h1> -->
       <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/composition-red-black-gold/0QGD5fSsbfSNzw?hl=ru">«Композиция (Красное-Черное-Золотое)»</a>
-      <h2>Любовь Попова, 1920.<br>
+      <h2>Любовь Попова, 1918.<br>
         23,2x29 см. Коллаж.<br>
         Museu Coleção Berardo.<br>
       </h2>
@@ -57,7 +82,7 @@
         <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
       </nav>
       <h1>«Композиция (Красное-Черное-Золотое)»</h1>
-      <h2>Любовь Попова, 1920.<br>
+      <h2>Любовь Попова, 1918.<br>
         23,2x29 см. Коллаж.<br>
         Museu Coleção Berardo.<br>
       </h2>
