--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="stylesheets/reset.css">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/timeline.css">
-  <link rel="stylesheet" href="stylesheets/malevich.css">
+  <link rel="stylesheet" href="stylesheets/index.css">
   <!-- <link rel="stylesheet" href="stylesheets/chaos.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/menubar.css"> -->
   <!-- <link rel="stylesheet" href="stylesheets/3d.css"> -->
@@ -26,12 +26,13 @@
   <section class="timelineflex">
     <section class="timeline">
       <div class="tl3"></div>
+      <a href="index.html" class="tl1" id="abouts"><div id="aboutc" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1910s"><div id="y1910c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1911s"><div id="y1911c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1912s"><div id="y1912c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1913s"><div id="y1913c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1914s"><div id="y1914c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1915s"><div id="y1915c" class="tl2"></div></a>
+      <a href="index_malevich.html" class="tl1" id="y1915s"><div id="y1915c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1916s"><div id="y1916c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1917s"><div id="y1917c" class="tl2"></div></a>
       <a href="index_popova.html" class="tl1" id="y1918s"><div id="y1918c" class="tl2"></div></a>
@@ -49,60 +50,11 @@
     </section>
   </section>
 
-
-
-  <!-- <a class="navigation next" href="index_popova.html"><div></div></a>
-  <a class="navigation previous" href="gallery.html"><div></div></a> -->
-
   <section class="main">
-    <div class="bg">
-      <section class="figures screen">
-       <section class="ddd">
-         <div class="rectangle f1"></div>
-         <div class="rectangle f2"></div>
-         <div class="rectangle f3"></div>
-         <div class="rectangle f4"></div>
-         <div class="rectangle f5"></div>
-         <div class="rectangle f6"></div>
-         <div class="rectangle f7"></div>
-         <div class="rectangle f8"></div>
-         <div class="rectangle f9"></div>
-       </section>
-     </section>
-    </div>
-
-    <section class="figcaption nomobile">
-      <h1>«Живописный реализм футболиста»</h1>
-      <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/painterly-realism-of-a-football-player-%E2%80%93-color-masses-in-the-4th-dimension/HAFbsVPXhzyLMg?hl=ru">«Живописный реализм футболиста»</a> -->
-      <h2>Казимир Малевич, 1915.<br>
-        44x69,9 см. Холст, масло.<br>
-        Городской музей Амстердама.<br>
-      </h2>
-      <!-- <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p> -->
-      <p>Малевич считал супрематизм результатом развития кубизма, в&nbsp;котором исчезают реальные предметы и&nbsp;вещи, понятия &laquo;верх&raquo; и&nbsp;&laquo;низ&raquo;. Пространство произведения не&nbsp;зависит ни&nbsp;от&nbsp;чего. Cупрематические творения&nbsp;&mdash; самостоятельный мир, который, несмотря на&nbsp;замкнутость и&nbsp;ограниченность, имеет внутреннюю гармонию.</p>
-      <nav class="bottons">
-        <div class="random">РАНДОМ!</div>
-        <div class="tooriginal  original">к оригиналу</div>
-      </nav>
-      <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/painterly-realism-of-a-football-player-%E2%80%93-color-masses-in-the-4th-dimension/HAFbsVPXhzyLMg?hl=ru">смотреть в Google Arts&Culture</a> -->
+    <section class="figcaption about">
+      <h1>«Рандоматизм»</h1>
+      <h2>сайт рандомного искусства</h2>
+      <p>С&nbsp;помощью таймлайна можно выбирать произведения русского искусства начала XX века. Прочитав про картину, прочувствовав&nbsp;ее, смело жмите кнопку &laquo;РАНДОМ!&raquo;&nbsp;&mdash; изменяйте картину до&nbsp;тех пор, пока не&nbsp;достигнете достаточного уровня гармонии.<br><br>Сейчас работают: 1915, 1918</p>
     </section>
-
-    <section class="figcaption mobile">
-      <nav class="bottons">
-        <div class="random">РАНДОМ!</div>
-        <div class="tooriginal original">к оригиналу</div>
-        <!-- <a class="tooriginal" href="#">к оригиналу</a> -->
-      </nav>
-      <h1>«Живописный реализм футболиста»</h1>
-      <h2>Казимир Малевич, 1915.<br>
-        44x69,9 см. Холст, масло. <br>
-        Городской музей Амстердама.
-      </h2>
-      <!-- <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p> -->
-      <p>Малевич считал супрематизм результатом развития кубизма, в&nbsp;котором исчезают реальные предметы и&nbsp;вещи, испаряются понятия &laquo;верх&raquo; и&nbsp;&laquo;низ&raquo;. Пространство произведения не&nbsp;зависит ни&nbsp;от&nbsp;чего, включая силу притяжения. По&nbsp;мнению Малевича, супрематические творения&nbsp;&mdash; самостоятельный мир, который, несмотря на&nbsp;замкнутость и&nbsp;ограниченность, имеет внутреннюю гармонию.</p>
-    </section>
-  </section>
-
-
 </body>
 </html>
