--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="figcaption about">
       <h1>«Рандоматизм»</h1>
       <h2>сайт рандомного искусства</h2>
-      <p>С&nbsp;помощью таймлайна можно выбирать произведения русского искусства начала XX века. Прочитав про картину, прочувствовав&nbsp;ее, смело жмите кнопку &laquo;РАНДОМ!&raquo;&nbsp;&mdash; изменяйте картину до&nbsp;тех пор, пока не&nbsp;достигнете достаточного уровня гармонии.<br><br>Сейчас работают: 1915, 1918</p>
+      <p>С&nbsp;помощью таймлайна выбирай произведения русского искусства начала XX века. Прочитав про картину, прочувствовав&nbsp;ее, смело жми кнопку &laquo;РАНДОМ!&raquo;&nbsp;&mdash; изменяй картину до&nbsp;тех пор, пока не&nbsp;достигнешь достаточного уровня гармонии.<br><br>Сейчас работают 1915 и 1918 года.</p>
     </section>
 </body>
 </html>
