--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
   <section class="main">
     <section class="figcaption about">
       <h1>«Рандоматизм»</h1>
-      <h2>сайт рандомного искусства</h2>
-      <p>С&nbsp;помощью таймлайна выбирай произведения русского искусства начала XX века. Прочитав про картину, прочувствовав&nbsp;ее, смело жми кнопку &laquo;РАНДОМ!&raquo;&nbsp;&mdash; изменяй картину до&nbsp;тех пор, пока не&nbsp;достигнешь достаточного уровня гармонии.<br><br>Сейчас работают 1915 и 1918 года.</p>
+      <!-- <h2>сайт рандомного искусства</h2> -->
+      <p>Супрематизм-направление, полностью отказавшееся от&nbsp;материальности и&nbsp;изобразительности в&nbsp;искусстве, сосредоточившееся на&nbsp;поиске композиции, цвета, динамики простых геометрических форм и&nbsp;изучении их&nbsp;воздействия на&nbsp;зрителя.</p>
+      <p>Нередко от&nbsp;людей ускользает философский и&nbsp;художественный подтекст работ.</p>
+      <p>В&nbsp;том, что супрематисты вкладывали смысл в&nbsp;расположение объектов на&nbsp;полотне, можно убедиться, случайным образом меняя известные картины и&nbsp;сравнивая результат с&nbsp;оригиналом.</p>
+      <p>Сейчас работают 1915 и 1918 года.</p>
+      <!-- <p>&copy;А.Моск</p> -->
+      <a target="_blank" href="https://www.facebook.com/av.mosk">а.моск</a>
     </section>
 </body>
 </html>
