--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="figcaption about">
       <h1>«Рандоматизм»</h1>
       <!-- <h2>сайт рандомного искусства</h2> -->
-      <p>Супрематизм-направление, полностью отказавшееся от&nbsp;материальности и&nbsp;изобразительности в&nbsp;искусстве, сосредоточившееся на&nbsp;поиске композиции, цвета, динамики простых геометрических форм и&nbsp;изучении их&nbsp;воздействия на&nbsp;зрителя.</p>
+      <p>Супрематизм&nbsp;&mdash; направление, полностью отказавшееся от&nbsp;материальности и&nbsp;изобразительности в&nbsp;искусстве, сосредоточившееся на&nbsp;поиске композиции, цвета, динамики простых геометрических форм и&nbsp;изучении их&nbsp;воздействия на&nbsp;зрителя.</p>
       <p>Нередко от&nbsp;людей ускользает философский и&nbsp;художественный подтекст работ.</p>
       <p>В&nbsp;том, что супрематисты вкладывали смысл в&nbsp;расположение объектов на&nbsp;полотне, можно убедиться, случайным образом меняя известные картины и&nbsp;сравнивая результат с&nbsp;оригиналом.</p>
       <p>Сейчас работают 1915 и 1918 года.</p>
