--- a/index_popova.html
+++ b/index_popova.html
@@ -64,8 +64,8 @@
     </div>
 
     <section class="figcaption nomobile">
-      <!-- <h1>«Композиция (Красное-Черное-Золотое)»</h1> -->
-      <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/composition-red-black-gold/0QGD5fSsbfSNzw?hl=ru">«Композиция (Красное-Черное-Золотое)»</a>
+      <h1>«Композиция (Красное-Черное-Золотое)»</h1>
+      <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/composition-red-black-gold/0QGD5fSsbfSNzw?hl=ru">«Композиция (Красное-Черное-Золотое)»</a> -->
       <h2>Любовь Попова, 1918.<br>
         23,2x29 см. Коллаж.<br>
         Museu Coleção Berardo.<br>
