фон о проекте, убрал подчеркивания

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
   </section>
 
-  <section class="main">
+  <section class="main mainabout">
     <section class="figcaption about">
       <h1>«Рандоматизм»</h1>
       <!-- <h2>сайт рандомного искусства</h2> -->
