--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <a href="#" class="tl1" id="y1921s"><div id="y1921c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1922s"><div id="y1922c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1923s"><div id="y1923c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1924s"><div id="y1924c" class="tl2"></div></a>
+      <a href="index_lisitskiy.html" class="tl1" id="y1924s"><div id="y1924c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1925s"><div id="y1925c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1926s"><div id="y1926c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1927s"><div id="y1927c" class="tl2"></div></a>
@@ -57,7 +57,7 @@
       <p>Супрематизм&nbsp;&mdash; направление, полностью отказавшееся от&nbsp;материальности и&nbsp;изобразительности в&nbsp;искусстве, сосредоточившееся на&nbsp;поиске композиции, цвета, динамики простых геометрических форм и&nbsp;изучении их&nbsp;воздействия на&nbsp;зрителя.</p>
       <p>Нередко от&nbsp;людей ускользает философский и&nbsp;художественный подтекст работ.</p>
       <p>В&nbsp;том, что супрематисты вкладывали смысл в&nbsp;расположение объектов на&nbsp;полотне, можно убедиться, случайным образом меняя известные картины и&nbsp;сравнивая результат с&nbsp;оригиналом.</p>
-      <p>Сейчас работают 1915 и 1918 года.</p>
+      <p>Сейчас работают 1915, 1918 и 1924 года.</p>
       <!-- <p>&copy;А.Моск</p> -->
       <a target="_blank" href="https://www.facebook.com/av.mosk">а.моск</a>
     </section>
