--- a/index_popova.html
+++ b/index_popova.html
@@ -40,7 +40,7 @@
       <a href="#" class="tl1" id="y1921s"><div id="y1921c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1922s"><div id="y1922c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1923s"><div id="y1923c" class="tl2"></div></a>
-      <a href="#" class="tl1" id="y1924s"><div id="y1924c" class="tl2"></div></a>
+      <a href="index_lisitskiy.html" class="tl1" id="y1924s"><div id="y1924c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1925s"><div id="y1925c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1926s"><div id="y1926c" class="tl2"></div></a>
       <a href="#" class="tl1" id="y1927s"><div id="y1927c" class="tl2"></div></a>
