--- a/index_lisitskiy.html
+++ b/index_lisitskiy.html
@@ -78,7 +78,7 @@
     <section class="figcaption nomobile">
       <h1>«Kestnermappe Proun, Rob. Levnis and Chapman GmbH Hannover #5»</h1>
       <!-- <a target="_blank" href="https://www.google.com/culturalinstitute/beta/u/0/asset/painterly-realism-of-a-football-player-%E2%80%93-color-masses-in-the-4th-dimension/HAFbsVPXhzyLMg?hl=ru">«Живописный реализм футболиста»</a> -->
-      <h2>Lazar El Lissitzky1923<br>
+      <h2>Lazar El Lissitzky, 1923<br>
         Museu Coleção Berardo
       </h2>
       <!-- <p>В&nbsp;этом произведении художник явно хотел противопоставить свои ощущения визуальному опыту человека, ведь футбол неизменно связан с&nbsp;круглыми формами мяча. Однако на&nbsp;этой картине нет ни&nbsp;одной круглой детали. Нет даже ощущения быстрого движения&nbsp;&mdash; можно представить себе только замедленное действие.</p> -->
